# metel

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  IMPLEMENTATION_GUIDE.md  README.md  TASK-CONVENTION.md  TYPECHECKER_AND_TYPED_AST_TASKS.md  TYPEINFERENCE_ROADMAP.md  TYPEINFERENCE_SETUP.md
metel-interpreter/: Cargo.toml  build.rs
metel-interpreter/docs/: architecture.md  evaluator.md  sprint-12-gap-analysis.md  testing.md  typechecker.md
metel-interpreter/docs/decisions/: adr-0005-if-expression-grammar-and-ast-unification.md  adr-0032-type-registry-cross-module-accumulator.md  adr-0033-string-interpolation-lowered-in-parser.md  adr-0034-aspect-defaults-synthesized-in-construction.md  adr-0035-typed-place-for-assignment-targets.md  adr-0036-explicit-receiver-dispatch.md  adr-0037-elaboration-boundary.md
metel-interpreter/src/: grammar.pest  lib.rs  main.rs  module_loader.rs  module_paths.rs  name_resolver.rs  path_normalizer.rs  symbols.rs
metel-interpreter/src/ast/: mod.rs
metel-interpreter/src/elaborator/: mod.rs
metel-interpreter/src/error/: mod.rs
metel-interpreter/src/evaluator/: builtins.rs  call.rs  display.rs  lvalue.rs  mod.rs  pattern.rs  type_of.rs
metel-interpreter/src/parser/: mod.rs
metel-interpreter/src/typechecker/: construction.rs  conversions.rs  inference.rs  mod.rs  registry.rs
metel-interpreter/src/typed_ast/: mod.rs
metel-interpreter/src/typeinference/: mod.rs
metel-interpreter/src/types/: mod.rs
metel-interpreter/tests/: integration.rs  lib.rs  unit.rs
metel-interpreter/tests/evaluator/: evaluator_tests.rs
(+753 files in other folders)
