[package]
name = "metel"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "metel"
path = "src/main.rs"

[dependencies]
# PEG parser generator — grammar lives in src/grammar.pest
pest = "2"
pest_derive = "2"

# Nicer error reporting with source context
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
clap = { version = "4.6.0", features = ["derive"] }
